--- a/app/views/deals/_body_promocode.html.erb
+++ b/app/views/deals/_body_promocode.html.erb
@@ -48,6 +48,187 @@
   <div class="deal_btn promo_btn"><a target="_blank" href="product_link">Use Code at Amazon</a></div>
 </div>
  -->
+<div class="card clearfix" data-score="25" data-price="14.99">
+  <div class="image_box">
+    <a target="_blank" href="https://amzn.to/31H9TXB"><img src="https://m.media-amazon.com/images/I/71uyY9VhduL._SR400,400_.jpg" alt="Storage Packing Cubes" /></a>
+  </div>
+  <div class="inner inner_top">
+    <span class="regular"><em>25% OFF</em> + free shipping</span>
+    <span class="shipping_condition">Free Shipping: <a target="_blank" href="/blogs/blog_01_amz_prime">Prime</a> or $25+ of all other eligible items.</a></span>
+    <p><a target="_blank" href="https://amzn.to/31H9TXB">Storage Packing Cubes, Keenstone-Sets Best Value Luggage Organizers, Storage Bags Suitcase - Compressible Storage Cubes...</a></p>
+    <div class="code_high">
+      <address><span class="dis_price">$14.99</span><span class="ori_price">$19.99</span>
+        <div class="tooltip_common tooltip_green"><span>Extra Discount</span><div class="content_common tooltip-content"><p>Get extra discount with coupon</p></div></div>
+      </address>
+      <div class="m_tooltip_common m_tooltip_green"><span>Extra Discount</span><div class="m_content_common m_tooltip-content"><p>Get extra discount with coupon</p></div></div>
+      <textarea readonly="readonly" class="code_area">252E4IPY</textarea><button class="copycode">Copy</button>
+      <p class="mobile_code"><span>Take <strong>25% off at $19.99</strong> with promo code: <strong class="m_codes">252E4IPY</strong></span></p><span class="ex_date ex_date_new">Expiration Date : Aug 16, 2019 at 11:59 PM PDT</span><em>*Pricing may change and Amazon promotional codes can expire fast.</em>
+    </div>
+  </div> 
+  <div class="deal_btn promo_btn"><a target="_blank" href="https://amzn.to/31H9TXB">Use Code at Amazon</a></div>
+</div>
+
+<div class="card clearfix" data-score="57" data-price="6.01">
+  <div class="image_box">
+    <a target="_blank" href="https://amzn.to/31OoqAZ"><img src="https://m.media-amazon.com/images/I/61XkIVEaDBL._SR400,400_.jpg" alt="Pen Light" /></a>
+  </div>
+  <div class="inner inner_top">
+    <span class="regular"><em>57% OFF</em> + free shipping</span>
+    <span class="shipping_condition">Free Shipping: <a target="_blank" href="/blogs/blog_01_amz_prime">Prime</a> or $25+ of all other eligible items.</a></span>
+    <p><a target="_blank" href="https://amzn.to/31OoqAZ">Pen Light, RISEMART Nurse Led Medical Penlight with Pupil Gauge for Nursing Students Doctors Red and Blue with Batteries</a></p>
+    <div class="code_high">
+      <address><span class="dis_price">$6.01</span><span class="ori_price">$13.98</span>
+        <div class="tooltip_common tooltip_green"><span>Extra Discount</span><div class="content_common tooltip-content"><p>Get extra discount with coupon</p></div></div>
+      </address>
+      <div class="m_tooltip_common m_tooltip_green"><span>Extra Discount</span><div class="m_content_common m_tooltip-content"><p>Get extra discount with coupon</p></div></div>
+      <textarea readonly="readonly" class="code_area">57223M9G</textarea><button class="copycode">Copy</button>
+      <p class="mobile_code"><span>Take <strong>57% off at $13.98</strong> with promo code: <strong class="m_codes">57223M9G</strong></span></p><span class="ex_date ex_date_new">Expiration Date : Aug 16, 2019 at 11:59 PM PDT</span><em>*Pricing may change and Amazon promotional codes can expire fast.</em>
+    </div>
+  </div> 
+  <div class="deal_btn promo_btn"><a target="_blank" href="https://amzn.to/31OoqAZ">Use Code at Amazon</a></div>
+</div>
+ 
+<div class="card clearfix" data-score="60" data-price="16.00">
+  <div class="image_box">
+    <a target="_blank" href="https://amzn.to/2H8iPO4"><img src="https://m.media-amazon.com/images/I/71Kr8xA0w9L._SR400,400_.jpg" alt="PETUOL Snorkeling Mask" /></a>
+  </div>
+  <div class="inner inner_top">
+    <span class="regular"><em>60% OFF</em> + free shipping</span>
+    <span class="shipping_condition">Free Shipping: <a target="_blank" href="/blogs/blog_01_amz_prime">Prime</a> or $25+ of all other eligible items.</a></span>
+    <p><a target="_blank" href="https://amzn.to/2H8iPO4">PETUOL Snorkeling Mask, Full Face Diving Panoramic Leak-Proof Anti-Fog Mask, Double Breathing Foldable Breathing ...</a></p>
+    <div class="code_high">
+      <address><span class="dis_price">$16.00</span><span class="ori_price">$39.99</span>
+        <div class="tooltip_common tooltip_green"><span>Extra Discount</span><div class="content_common tooltip-content"><p>Get extra discount with coupon</p></div></div>
+      </address>
+      <div class="m_tooltip_common m_tooltip_green"><span>Extra Discount</span><div class="m_content_common m_tooltip-content"><p>Get extra discount with coupon</p></div></div>
+      <textarea readonly="readonly" class="code_area">60S8Y34E</textarea><button class="copycode">Copy</button>
+      <p class="mobile_code"><span>Take <strong>60% off at $39.99</strong> with promo code: <strong class="m_codes">60S8Y34E</strong></span></p><span class="ex_date ex_date_new">Expiration Date : Aug 23, 2019 at 11:59 PM PDT</span><em>*Pricing may change and Amazon promotional codes can expire fast.</em>
+    </div>
+  </div> 
+  <div class="deal_btn promo_btn"><a target="_blank" href="https://amzn.to/2H8iPO4">Use Code at Amazon</a></div>
+</div>
+ 
+<div class="card clearfix" data-score="35" data-price="45.49">
+  <div class="image_box">
+    <a target="_blank" href="https://amzn.to/2KBrNp6"><img src="https://m.media-amazon.com/images/I/61GkwDT0pTL._SR400,400_.jpg" alt="icemoon Hidden Camera" /></a>
+  </div>
+  <div class="inner inner_top">
+    <span class="regular"><em>35% OFF</em> + free shipping</span>
+    <span class="shipping_condition">Free Shipping: <a target="_blank" href="/blogs/blog_01_amz_prime">Prime</a> or $25+ of all other eligible items.</a></span>
+    <p><a target="_blank" href="https://amzn.to/2KBrNp6">icemoon Hidden Camera 1080P Full HD Wireless Security Camera with Remotely Monitoring, Motion Detection,Bluetooth Speaker,...</a></p>
+    <div class="code_high">
+      <address><span class="dis_price">$45.49</span><span class="ori_price">$69.99</span>
+        <div class="tooltip_common tooltip_green"><span>Extra Discount</span><div class="content_common tooltip-content"><p>Get extra discount with coupon</p></div></div>
+      </address>
+      <div class="m_tooltip_common m_tooltip_green"><span>Extra Discount</span><div class="m_content_common m_tooltip-content"><p>Get extra discount with coupon</p></div></div>
+      <textarea readonly="readonly" class="code_area">357XAAOL</textarea><button class="copycode">Copy</button>
+      <p class="mobile_code"><span>Take <strong>35% off at $69.99</strong> with promo code: <strong class="m_codes">357XAAOL</strong></span></p><span class="ex_date ex_date_new">Expiration Date : Aug 18, 2019 at 11:59 PM PDT</span><em>*Pricing may change and Amazon promotional codes can expire fast.</em>
+    </div>
+  </div> 
+  <div class="deal_btn promo_btn"><a target="_blank" href="https://amzn.to/2KBrNp6">Use Code at Amazon</a></div>
+</div>
+ 
+<div class="card clearfix" data-score="60" data-price="24.40">
+  <div class="image_box">
+    <a target="_blank" href="https://amzn.to/2TEFM0o"><img src="https://m.media-amazon.com/images/I/61zAMEBXWiL._SR400,400_.jpg" alt="wandwoo Wireless 1080P Security Camera" /></a>
+  </div>
+  <div class="inner inner_top">
+    <span class="regular"><em>60% OFF</em> + free shipping</span>
+    <span class="shipping_condition">Free Shipping: <a target="_blank" href="/blogs/blog_01_amz_prime">Prime</a> or $25+ of all other eligible items.</a></span>
+    <p><a target="_blank" href="https://amzn.to/2TEFM0o">wandwoo Wireless 1080P Security Camera, WiFi IP Camera with 2 Way Audio,180° Fisheye Panoramic Security Camera...</a></p>
+    <div class="code_high">
+      <address><span class="dis_price">$24.40</span><span class="ori_price">$60.99</span></address>
+      <textarea readonly="readonly" class="code_area">603125O4</textarea><button class="copycode">Copy</button>
+      <p class="mobile_code"><span>Take <strong>60% off at $60.99</strong> with promo code: <strong class="m_codes">603125O4</strong></span></p><span class="ex_date ex_date_new">Expiration Date : End_date</span><em>*Pricing may change and Amazon promotional codes can expire fast.</em>
+    </div>
+  </div> 
+  <div class="deal_btn promo_btn"><a target="_blank" href="https://amzn.to/2TEFM0o">Use Code at Amazon</a></div>
+</div>
+
+<div class="card clearfix" data-score="65" data-price="6.30">
+  <div class="image_box">
+    <a target="_blank" href="https://amzn.to/2KDQy3K"><img src="https://m.media-amazon.com/images/I/71C6YX1z1mL._SR400,400_.jpg" alt="JOYSHAKER 2.2L Water Jug Large Capacity" /></a>
+  </div>
+  <div class="inner inner_top">
+    <span class="regular"><em>65% OFF</em> + free shipping</span>
+    <span class="shipping_condition">Free Shipping: <a target="_blank" href="/blogs/blog_01_amz_prime">Prime</a> or $25+ of all other eligible items.</a></span>
+    <p><a target="_blank" href="https://amzn.to/2KDQy3K">JOYSHAKER 2.2L Water Jug Large Capacity Like Half Gallon Water Bottle Keep Enough Water to Drink,The Large Reusable Water...</a></p>
+    <div class="code_high">
+      <address><span class="dis_price">$6.30</span><span class="ori_price">$17.99</span></address>
+      <textarea readonly="readonly" class="code_area">65SMWUYN</textarea><button class="copycode">Copy</button>
+      <p class="mobile_code"><span>Take <strong>65% off at $17.99</strong> with promo code: <strong class="m_codes">65SMWUYN</strong></span></p><span class="ex_date ex_date_new">Expiration Date : Aug 23, 2019 at 11:59 PM PDT</span><em>*Pricing may change and Amazon promotional codes can expire fast.</em>
+    </div>
+  </div> 
+  <div class="deal_btn promo_btn"><a target="_blank" href="https://amzn.to/2KDQy3K">Use Code at Amazon</a></div>
+</div>
+
+<div class="card clearfix" data-score="53" data-price="9.87">
+  <div class="image_box">
+    <a target="_blank" href="https://amzn.to/2Z4HclT"><img src="https://m.media-amazon.com/images/I/71Rk-vLEGiL._SR400,400_.jpg" alt="Laptop Bag For Women Metallic Top Handle Tote Shoulder Bag" /></a>
+  </div>
+  <div class="inner inner_top">
+    <span class="regular"><em>53% OFF</em> + free shipping</span>
+    <span class="shipping_condition">Free Shipping: <a target="_blank" href="/blogs/blog_01_amz_prime">Prime</a> or $25+ of all other eligible items.</a></span>
+    <p><a target="_blank" href="https://amzn.to/2Z4HclT">Laptop Bag For Women Metallic Top Handle Tote Shoulder Bag By The Lovely Tote Co.</a></p>
+    <div class="code_high">
+      <address><span class="dis_price">$9.87</span><span class="ori_price">$20.99</span></address>
+      <textarea readonly="readonly" class="code_area">53W9XJBK</textarea><button class="copycode">Copy</button>
+      <p class="mobile_code"><span>Take <strong>53% off at $20.99</strong> with promo code: <strong class="m_codes">53W9XJBK</strong></span></p><span class="ex_date ex_date_new">Expiration Date : Aug 17, 2019 at 11:59 PM PDT</span><em>*Pricing may change and Amazon promotional codes can expire fast.</em>
+    </div>
+  </div> 
+  <div class="deal_btn promo_btn"><a target="_blank" href="https://amzn.to/2Z4HclT">Use Code at Amazon</a></div>
+</div>
+ 
+<div class="card clearfix" data-score="50" data-price="14.99">
+  <div class="image_box">
+    <a target="_blank" href="https://amzn.to/2z5iqaI"><img src="https://m.media-amazon.com/images/I/71QofyoAmSL._SR400,400_.jpg" alt="S-ZONE 17inch Carry " /></a>
+  </div>
+  <div class="inner inner_top">
+    <span class="regular"><em>50% OFF</em> + free shipping</span>
+    <span class="shipping_condition">Free Shipping: <a target="_blank" href="/blogs/blog_01_amz_prime">Prime</a> or $25+ of all other eligible items.</a></span>
+    <p><a target="_blank" href="https://amzn.to/2z5iqaI">S-ZONE 17inch Carry on Lightweight Small Weekender Duffel Bag Travel Size Sports Durable Gym Bag</a></p>
+    <div class="code_high">
+      <address><span class="dis_price">$14.99</span><span class="ori_price">$29.99</span></address>
+      <textarea readonly="readonly" class="code_area">509BCVY3</textarea><button class="copycode">Copy</button>
+      <p class="mobile_code"><span>Take <strong>50% off at $29.99</strong> with promo code: <strong class="m_codes">509BCVY3</strong></span></p><span class="ex_date ex_date_new">Expiration Date : Aug 21, 2019 at 11:59 PM PDT</span><em>*Pricing may change and Amazon promotional codes can expire fast.</em>
+    </div>
+  </div> 
+  <div class="deal_btn promo_btn"><a target="_blank" href="https://amzn.to/2z5iqaI">Use Code at Amazon</a></div>
+</div>
+ 
+<div class="card clearfix" data-score="50" data-price="16.99">
+  <div class="image_box">
+    <a target="_blank" href="https://amzn.to/31HMZPW"><img src="https://m.media-amazon.com/images/I/711MF25yR5L._SR400,400_.jpg" alt="SoarOwl Hiking Backpack 45L" /></a>
+  </div>
+  <div class="inner inner_top">
+    <span class="regular"><em>50% OFF</em> + free shipping</span>
+    <span class="shipping_condition">Free Shipping: <a target="_blank" href="/blogs/blog_01_amz_prime">Prime</a> or $25+ of all other eligible items.</a></span>
+    <p><a target="_blank" href="https://amzn.to/31HMZPW">SoarOwl Hiking Backpack 45L -Travel & Hiking Camping Backpack with Waterproof Rain Cover Outdoor Backpacking ...</a></p>
+    <div class="code_high">
+      <address><span class="dis_price">$16.99</span><span class="ori_price">$33.98</span></address>
+      <textarea readonly="readonly" class="code_area">50R85F4L</textarea><button class="copycode">Copy</button>
+      <p class="mobile_code"><span>Take <strong>50% off at $33.98</strong> with promo code: <strong class="m_codes">50R85F4L</strong></span></p><span class="ex_date ex_date_new">Expiration Date : Aug 19, 2019 at 11:59 PM PDT</span><em>*Pricing may change and Amazon promotional codes can expire fast.</em>
+    </div>
+  </div> 
+  <div class="deal_btn promo_btn"><a target="_blank" href="https://amzn.to/31HMZPW">Use Code at Amazon</a></div>
+</div>
+ 
+<div class="card clearfix" data-score="64" data-price="5.76">
+  <div class="image_box">
+    <a target="_blank" href="https://amzn.to/2YV98x2"><img src="https://m.media-amazon.com/images/I/61AAmuddfAL._SR400,400_.jpg" alt="CORTEGE Lightweight Packable Backpack" /></a>
+  </div>
+  <div class="inner inner_top">
+    <span class="regular"><em>64% OFF</em> + free shipping</span>
+    <span class="shipping_condition">Free Shipping: <a target="_blank" href="/blogs/blog_01_amz_prime">Prime</a> or $25+ of all other eligible items.</a></span>
+    <p><a target="_blank" href="https://amzn.to/2YV98x2">CORTEGE Lightweight Packable Backpack Durable Folding Travel Hiking Trekking Camping Cycling Foldable Backpack...</a></p>
+    <div class="code_high">
+      <address><span class="dis_price">$5.76</span><span class="ori_price">$15.99</span></address>
+      <textarea readonly="readonly" class="code_area">643AYBV1</textarea><button class="copycode">Copy</button>
+      <p class="mobile_code"><span>Take <strong>64% off at $15.99</strong> with promo code: <strong class="m_codes">643AYBV1</strong></span></p><span class="ex_date ex_date_new">Expiration Date : Aug 16, 2019 at 11:59 PM PDT</span><em>*Pricing may change and Amazon promotional codes can expire fast.</em>
+    </div>
+  </div> 
+  <div class="deal_btn promo_btn"><a target="_blank" href="https://amzn.to/2YV98x2">Use Code at Amazon</a></div>
+</div>
 
  <div class="card clearfix" data-score="50" data-price="27.50">
   <div class="image_box">
