--- a/app/views/deals/_body_promocode.html.erb
+++ b/app/views/deals/_body_promocode.html.erb
@@ -48,6 +48,182 @@
   <div class="deal_btn promo_btn"><a target="_blank" href="product_link">Use Code at Amazon</a></div>
 </div>
  -->
+<div class="card clearfix" data-score="51" data-price="14.70">
+  <div class="image_box">
+    <a target="_blank" href="https://amzn.to/2KFyruz"><img src="https://m.media-amazon.com/images/I/71SZDyOwP9L._SR400,400_.jpg" alt="Xbox One Headset,Gaming Headset" /></a>
+  </div>
+  <div class="inner inner_top">
+    <span class="regular"><em>51% OFF</em> + free shipping</span>
+    <span class="shipping_condition">Free Shipping: <a target="_blank" href="/blogs/blog_01_amz_prime">Prime</a> or $25+ of all other eligible items.</a></span>
+    <p><a target="_blank" href="https://amzn.to/2KFyruz">Xbox One Headset,Gaming Headset for PS4 PC Mobile Phone,3.5 mm Gaming Headset LED Light Over-Ear Headphones...</a></p>
+    <div class="code_high">
+      <address><span class="dis_price">$14.70</span><span class="ori_price">$29.99</span></address>
+      <textarea readonly="readonly" class="code_area">513JSI56</textarea><button class="copycode">Copy</button>
+      <p class="mobile_code"><span>Take <strong>51% off at $29.99</strong> with promo code: <strong class="m_codes">513JSI56</strong></span></p><span class="ex_date ex_date_new">Expiration Date : Aug 30, 2019 at 11:59 PM PDT</span><em>*Pricing may change and Amazon promotional codes can expire fast.</em>
+    </div>
+  </div> 
+  <div class="deal_btn promo_btn"><a target="_blank" href="https://amzn.to/2KFyruz">Use Code at Amazon</a></div>
+</div>
+
+<div class="card clearfix" data-score="40" data-price="29.39">
+  <div class="image_box">
+    <a target="_blank" href="https://amzn.to/2KRIGdZ"><img src="https://m.media-amazon.com/images/I/51lxdMrMWZL._SR400,400_.jpg" alt="maxtop Smart Watch for Android Phones" /></a>
+  </div>
+  <div class="inner inner_top">
+    <span class="regular"><em>40% OFF</em> + free shipping</span>
+    <span class="shipping_condition">Free Shipping: <a target="_blank" href="/blogs/blog_01_amz_prime">Prime</a> or $25+ of all other eligible items.</a></span>
+    <p><a target="_blank" href="https://amzn.to/2KRIGdZ">maxtop Smart Watch for Android Phones - iOS Phones, Full Screen Large Size Metal Shell Clear Interface Smartwatch...</a></p>
+    <div class="code_high">
+      <address><span class="dis_price">$29.39</span><span class="ori_price">$48.99</span></address>
+      <textarea readonly="readonly" class="code_area">40LZS8T6</textarea><button class="copycode">Copy</button>
+      <p class="mobile_code"><span>Take <strong>40% off at $48.99</strong> with promo code: <strong class="m_codes">40LZS8T6</strong></span></p><span class="ex_date ex_date_new">Expiration Date : Aug 24, 2019 at 11:59 PM PDT</span><em>*Pricing may change and Amazon promotional codes can expire fast.</em>
+    </div>
+  </div> 
+  <div class="deal_btn promo_btn"><a target="_blank" href="https://amzn.to/2KRIGdZ">Use Code at Amazon</a></div>
+</div>
+
+<div class="card clearfix" data-score="50" data-price="12.99">
+  <div class="image_box">
+    <a target="_blank" href="https://amzn.to/2KPCAL7"><img src="https://m.media-amazon.com/images/I/61lvKwBRU0L._SR400,400_.jpg" alt="USB Charging Station" /></a>
+  </div>
+  <div class="inner inner_top">
+    <span class="regular"><em>50% OFF</em> + free shipping</span>
+    <span class="shipping_condition">Free Shipping: <a target="_blank" href="/blogs/blog_01_amz_prime">Prime</a> or $25+ of all other eligible items.</a></span>
+    <p><a target="_blank" href="https://amzn.to/2KPCAL7">USB Charging Station for Multiple Devices - YIHUNION 5 Port Quick Charger Desk Docking Organizer with 3.0 Compatible...</a></p>
+    <div class="code_high">
+      <address><span class="dis_price">$12.99</span><span class="ori_price">$25.99</span></address>
+      <textarea readonly="readonly" class="code_area">509UP11L</textarea><button class="copycode">Copy</button>
+      <p class="mobile_code"><span>Take <strong>50% off at $25.99</strong> with promo code: <strong class="m_codes">509UP11L</strong></span></p><span class="ex_date ex_date_new">Expiration Date : Aug 23, 2019 at 11:59 PM PDT</span><em>*Pricing may change and Amazon promotional codes can expire fast.</em>
+    </div>
+  </div> 
+  <div class="deal_btn promo_btn"><a target="_blank" href="https://amzn.to/2KPCAL7">Use Code at Amazon</a></div>
+</div>
+
+<div class="card clearfix" data-score="45" data-price="12.09">
+  <div class="image_box">
+    <a target="_blank" href="https://amzn.to/33K335I"><img src="https://m.media-amazon.com/images/I/511mj86mEKL._SR400,400_.jpg" alt="Selkie Mini Wireless Earbud" /></a>
+  </div>
+  <div class="inner inner_top">
+    <span class="regular"><em>45% OFF</em> + free shipping</span>
+    <span class="shipping_condition">Free Shipping: <a target="_blank" href="/blogs/blog_01_amz_prime">Prime</a> or $25+ of all other eligible items.</a></span>
+    <p><a target="_blank" href="https://amzn.to/33K335I">Selkie Mini Wireless Earbud, [Upgrade Version] Single Wireless Earbud with HD Sound Quality, 10 Hours Talkingtime ...</a></p>
+    <div class="code_high">
+      <address><span class="dis_price">$12.09</span><span class="ori_price">$21.99</span></address>
+      <textarea readonly="readonly" class="code_area">45SWMC1U</textarea><button class="copycode">Copy</button>
+      <p class="mobile_code"><span>Take <strong>45% off at $21.99</strong> with promo code: <strong class="m_codes">45SWMC1U</strong></span></p><span class="ex_date ex_date_new">Expiration Date : Aug 17, 2019 at 11:59 PM PDT</span><em>*Pricing may change and Amazon promotional codes can expire fast.</em>
+    </div>
+  </div> 
+  <div class="deal_btn promo_btn"><a target="_blank" href="https://amzn.to/33K335I">Use Code at Amazon</a></div>
+</div>
+
+<div class="card clearfix" data-score="50" data-price="13.99">
+  <div class="image_box">
+    <a target="_blank" href="product_link"><img src="https://images-na.ssl-images-amazon.com/images/I/81nGu5Z01KL._SX425_.jpg" alt="Micoop Waterproof Floral Backpack" /></a>
+  </div>
+  <div class="inner inner_top">
+    <span class="regular"><em>50% OFF</em> + free shipping</span>
+    <span class="shipping_condition">Free Shipping: <a target="_blank" href="/blogs/blog_01_amz_prime">Prime</a> or $25+ of all other eligible items.</a></span>
+    <p><a target="_blank" href="product_link">Micoop Waterproof Floral Backpack Handbag Travel School Bag for Girls and Women (Dark Blue/Red Floral M)</a></p>
+    <div class="code_high">
+      <address><span class="dis_price">$13.99</span><span class="ori_price">$27.99</span></address>
+      <textarea readonly="readonly" class="code_area">5036EAP5</textarea><button class="copycode">Copy</button>
+      <p class="mobile_code"><span>Take <strong>50% off at $27.99</strong> with promo code: <strong class="m_codes">5036EAP5</strong></span></p><span class="ex_date ex_date_new">Expiration Date : Aug 22, 2019 at 11:59 PM PDT</span><em>*Pricing may change and Amazon promotional codes can expire fast.</em>
+    </div>
+  </div> 
+  <div class="deal_btn promo_btn"><a target="_blank" href="product_link">Use Code at Amazon</a></div>
+</div>
+
+<div class="card clearfix" data-score="50" data-price="5.00">
+  <div class="image_box">
+    <a target="_blank" href="https://amzn.to/2KEjgBF"><img src="https://m.media-amazon.com/images/I/41VQnbJkFsL._SR400,400_.jpg" alt="Mounchain Waist Packs Shiny Laser " /></a>
+  </div>
+  <div class="inner inner_top">
+    <span class="regular"><em>50% OFF</em> + free shipping</span>
+    <span class="shipping_condition">Free Shipping: <a target="_blank" href="/blogs/blog_01_amz_prime">Prime</a> or $25+ of all other eligible items.</a></span>
+    <p><a target="_blank" href="https://amzn.to/2KEjgBF">Mounchain Waist Packs Shiny Laser Holographic Fanny Pack for Women with Adjustable Waistband-Smartphone Money...</a></p>
+    <div class="code_high">
+      <address><span class="dis_price">$5.00</span><span class="ori_price">$9.99</span></address>
+      <textarea readonly="readonly" class="code_area">505WYPIN</textarea><button class="copycode">Copy</button>
+      <p class="mobile_code"><span>Take <strong>50% off at $9.99</strong> with promo code: <strong class="m_codes">505WYPIN</strong></span></p><span class="ex_date ex_date_new">Expiration Date : Aug 31, 2019 at 11:59 PM PDT</span><em>*Pricing may change and Amazon promotional codes can expire fast.</em>
+    </div>
+  </div> 
+  <div class="deal_btn promo_btn"><a target="_blank" href="https://amzn.to/2KEjgBF">Use Code at Amazon</a></div>
+</div>
+
+<div class="card clearfix" data-score="30" data-price="25.89">
+  <div class="image_box">
+    <a target="_blank" href="https://amzn.to/2Z6Y5Al"><img src="https://m.media-amazon.com/images/I/516IiAaluHL._SR400,400_.jpg" alt="Bluetooth Headset" /></a>
+  </div>
+  <div class="inner inner_top">
+    <span class="regular"><em>30% OFF</em> + free shipping</span>
+    <span class="shipping_condition">Free Shipping: <a target="_blank" href="/blogs/blog_01_amz_prime">Prime</a> or $25+ of all other eligible items.</a></span>
+    <p><a target="_blank" href="https://amzn.to/2Z6Y5Al">Bluetooth Headset V4.2 Hands-Free Wireless Earpieces CVC 6.0 Noise Reduction 8 Hours Play Time with Dual Microphones...</a></p>
+    <div class="code_high">
+      <address><span class="dis_price">$25.89</span><span class="ori_price">$36.98</span></address>
+      <textarea readonly="readonly" class="code_area">30RWPFUS</textarea><button class="copycode">Copy</button>
+      <p class="mobile_code"><span>Take <strong>30% off at $36.98</strong> with promo code: <strong class="m_codes">30RWPFUS</strong></span></p><span class="ex_date ex_date_new">Expiration Date : Aug 18, 2019 at 11:59 PM PDT</span><em>*Pricing may change and Amazon promotional codes can expire fast.</em>
+    </div>
+  </div> 
+  <div class="deal_btn promo_btn"><a target="_blank" href="https://amzn.to/2Z6Y5Al">Use Code at Amazon</a></div>
+</div>
+
+<div class="card clearfix" data-score="50" data-price="19.00">
+  <div class="image_box">
+    <a target="_blank" href="https://amzn.to/31UOhaz"><img src="https://m.media-amazon.com/images/I/714bV2DryOL._SR400,400_.jpg" alt="Voova Laptop Backpack Women Men..." /></a>
+  </div>
+  <div class="inner inner_top">
+    <span class="regular"><em>50% OFF</em> + free shipping</span>
+    <span class="shipping_condition">Free Shipping: <a target="_blank" href="/blogs/blog_01_amz_prime">Prime</a> or $25+ of all other eligible items.</a></span>
+    <p><a target="_blank" href="https://amzn.to/31UOhaz">Voova Laptop Backpack Women Men with Handle for Travel Business, Waterproof Canvas Computer Rucksack Bookbag for College School...</a></p>
+    <div class="code_high">
+      <address><span class="dis_price">$19.00</span><span class="ori_price">$37.99</span>
+        <div class="tooltip_common tooltip_green"><span>Extra Discount</span><div class="content_common tooltip-content"><p>Get extra discount with coupon</p></div></div>
+      </address>
+      <div class="m_tooltip_common m_tooltip_green"><span>Extra Discount</span><div class="m_content_common m_tooltip-content"><p>Get extra discount with coupon</p></div></div>
+      <textarea readonly="readonly" class="code_area">50UDAQNL</textarea><button class="copycode">Copy</button>
+      <p class="mobile_code"><span>Take <strong>50% off at $37.99</strong> with promo code: <strong class="m_codes">50UDAQNL</strong></span></p><span class="ex_date ex_date_new">Expiration Date : Aug 19, 2019 at 11:59 PM PDT</span><em>*Pricing may change and Amazon promotional codes can expire fast.</em>
+    </div>
+  </div> 
+  <div class="deal_btn promo_btn"><a target="_blank" href="https://amzn.to/31UOhaz">Use Code at Amazon</a></div>
+</div>
+
+<div class="card clearfix" data-score="40" data-price="23.99">
+  <div class="image_box">
+    <a target="_blank" href="https://amzn.to/2Z92Ppg"><img src="https://m.media-amazon.com/images/I/61jJhieXijL._SR400,400_.jpg" alt="1Mii Long Range Bluetooth 5.0 Headphones" /></a>
+  </div>
+  <div class="inner inner_top">
+    <span class="regular"><em>40% OFF</em> + free shipping</span>
+    <span class="shipping_condition">Free Shipping: <a target="_blank" href="/blogs/blog_01_amz_prime">Prime</a> or $25+ of all other eligible items.</a></span>
+    <p><a target="_blank" href="https://amzn.to/2Z92Ppg">1Mii Long Range Bluetooth 5.0 Headphones with aptx Low Latency, Bluetooth Headphones for TV Watching, Wireless...</a></p>
+    <div class="code_high">
+      <address><span class="dis_price">$23.99</span><span class="ori_price">$39.99</span>
+        <div class="tooltip_common tooltip_green"><span>Extra Discount</span><div class="content_common tooltip-content"><p>Get extra discount with coupon</p></div></div>
+      </address>
+      <div class="m_tooltip_common m_tooltip_green"><span>Extra Discount</span><div class="m_content_common m_tooltip-content"><p>Get extra discount with coupon</p></div></div>
+      <textarea readonly="readonly" class="code_area">405LJI14</textarea><button class="copycode">Copy</button>
+      <p class="mobile_code"><span>Take <strong>40% off at $39.99</strong> with promo code: <strong class="m_codes">405LJI14</strong></span></p><span class="ex_date ex_date_new">Expiration Date : Aug 19, 2019 at 11:59 PM PDT</span><em>*Pricing may change and Amazon promotional codes can expire fast.</em>
+    </div>
+  </div> 
+  <div class="deal_btn promo_btn"><a target="_blank" href="https://amzn.to/2Z92Ppg">Use Code at Amazon</a></div>
+</div>
+
+<div class="card clearfix" data-score="20" data-price="13.59">
+  <div class="image_box">
+    <a target="_blank" href="https://amzn.to/2Z9BP4W"><img src="https://m.media-amazon.com/images/I/91HkDoVkIXL._SR400,400_.jpg" alt="Universal Power Adapter" /></a>
+  </div>
+  <div class="inner inner_top">
+    <span class="regular"><em>20% OFF</em> + free shipping</span>
+    <span class="shipping_condition">Free Shipping: <a target="_blank" href="/blogs/blog_01_amz_prime">Prime</a> or $25+ of all other eligible items.</a></span>
+    <p><a target="_blank" href="https://amzn.to/2Z9BP4W">Universal Power Adapter, Woigi Travel Power Converter with 4 USB Ports Power Plug Adapter for EU, UK, US, USA, AU,...</a></p>
+    <div class="code_high">
+      <address><span class="dis_price">$13.59</span><span class="ori_price">$16.99</span></address>
+      <textarea readonly="readonly" class="code_area">20515LIF</textarea><button class="copycode">Copy</button>
+      <p class="mobile_code"><span>Take <strong>20% off at $16.99</strong> with promo code: <strong class="m_codes">20515LIF</strong></span></p><span class="ex_date ex_date_new">Expiration Date : Aug 20, 2019 at 11:59 PM PDT</span><em>*Pricing may change and Amazon promotional codes can expire fast.</em>
+    </div>
+  </div> 
+  <div class="deal_btn promo_btn"><a target="_blank" href="https://amzn.to/2Z9BP4W">Use Code at Amazon</a></div>
+</div>
+
 <div class="card clearfix" data-score="60" data-price="8.00">
   <div class="image_box">
     <a target="_blank" href="https://amzn.to/2z3Mkfl"><img src="https://m.media-amazon.com/images/I/61Ni2nmyvxL._SR400,400_.jpg" alt="Yoobao F01 Mini Portable USB Rechargeable Battery Fan" /></a>
@@ -162,7 +338,7 @@
     <span class="shipping_condition">Free Shipping: <a target="_blank" href="/blogs/blog_01_amz_prime">Prime</a> or $25+ of all other eligible items.</a></span>
     <p><a target="_blank" href="https://amzn.to/2Z9x5Mz">Bluetooth Headphones, VICSEED Wireless Sports Headphones with Bluetooth 4.1 Richer Bass HD Stereo & Secure Fit in-Ear Sport...</a></p>
     <div class="code_high">
-      <address><span class="dis_price">$9.2</span><span class="ori_price">$45.99</span></address>
+      <address><span class="dis_price">$9.20</span><span class="ori_price">$45.99</span></address>
       <textarea readonly="readonly" class="code_area">80455W8V</textarea><button class="copycode">Copy</button>
       <p class="mobile_code"><span>Take <strong>80% off at $45.99</strong> with promo code: <strong class="m_codes">80455W8V</strong></span></p><span class="ex_date ex_date_new">Expiration Date : Aug 31, 2019 at 11:59 PM PDT</span><em>*Pricing may change and Amazon promotional codes can expire fast.</em>
     </div>
