--- a/app/views/deals/_body_promocode.html.erb
+++ b/app/views/deals/_body_promocode.html.erb
@@ -49,6 +49,120 @@
 </div>
  -->
 
+<div class="card clearfix" data-score="50" data-price="30.00">
+  <div class="image_box">
+    <a target="_blank" href="https://amzn.to/31NkiBe"><img src="https://m.media-amazon.com/images/I/81a0bjQUiLL._SR400,400_.jpg" alt="Magnetic Screwdriver Set" /></a>
+  </div>
+  <div class="inner inner_top">
+    <span class="regular"><em>50% OFF</em> + free shipping</span>
+    <span class="shipping_condition">Free Shipping: <a target="_blank" href="/blogs/blog_01_amz_prime">Prime</a> or $25+ of all other eligible items.</a></span>
+    <p><a target="_blank" href="https://amzn.to/31NkiBe">Magnetic Screwdriver Set with Case, TECCPO 20-Piece Tool Kit Including Slotted/Phillips/Torx Precision Screwdriver,...</a></p>
+    <div class="code_high">
+      <address><span class="dis_price">$30.00</span><span class="ori_price">$59.99</span>
+        <div class="tooltip_common tooltip_green"><span>Extra Discount</span><div class="content_common tooltip-content"><p>Get extra discount with coupon</p></div></div>
+      </address>
+      <div class="m_tooltip_common m_tooltip_green"><span>Extra Discount</span><div class="m_content_common m_tooltip-content"><p>Get extra discount with coupon</p></div></div>
+      <textarea readonly="readonly" class="code_area">50MG1H2U</textarea><button class="copycode">Copy</button>
+      <p class="mobile_code"><span>Take <strong>50% off at $59.99</strong> with promo code: <strong class="m_codes">50MG1H2U</strong></span></p><span class="ex_date ex_date_new">Expiration Date : Aug 18, 2019 at 11:59 PM PDT</span><em>*Pricing may change and Amazon promotional codes can expire fast.</em>
+    </div>
+  </div> 
+  <div class="deal_btn promo_btn"><a target="_blank" href="https://amzn.to/31NkiBe">Use Code at Amazon</a></div>
+</div>
+
+<div class="card clearfix" data-score="65" data-price="19.24">
+  <div class="image_box">
+    <a target="_blank" href="https://amzn.to/2HfKWee"><img src="https://m.media-amazon.com/images/I/61t45lsq-JL._SR400,400_.jpg" alt="1Mii Long Range Bluetooth Wireless Speaker" /></a>
+  </div>
+  <div class="inner inner_top">
+    <span class="regular"><em>65% OFF</em> + free shipping</span>
+    <span class="shipping_condition">Free Shipping: <a target="_blank" href="/blogs/blog_01_amz_prime">Prime</a> or $25+ of all other eligible items.</a></span>
+    <p><a target="_blank" href="https://amzn.to/2HfKWee">1Mii Long Range Bluetooth Wireless Speaker, Portable Bluetooth Speaker with Music Mode&Vocal Mode, 10W 360⁰...</a></p>
+    <div class="code_high">
+      <address><span class="dis_price">$19.24</span><span class="ori_price">$54.98</span>
+        <div class="tooltip_common tooltip_red"><span>Extra Discount</span><div class="content_common tooltip-content"><p>Get extra discount by applying promotional code to the product that is being discounting.</p></div></div>
+      </address>
+      <div class="m_tooltip_common m_tooltip_red"><span>Extra Discount</span><div class="m_content_common m_tooltip-content"><p>Get extra discount by applying promotional code to the product that is being discounting.</p></div></div>
+      <textarea readonly="readonly" class="code_area">65MRSY1Q</textarea><button class="copycode">Copy</button>
+      <p class="mobile_code"><span>Take <strong>65% off at $54.98</strong> with promo code: <strong class="m_codes">65MRSY1Q</strong></span></p><span class="ex_date ex_date_new">Expiration Date : Aug 18, 2019 at 11:59 PM PDT</span><em>*Pricing may change and Amazon promotional codes can expire fast.</em>
+    </div>
+  </div> 
+  <div class="deal_btn promo_btn"><a target="_blank" href="https://amzn.to/2HfKWee">Use Code at Amazon</a></div>
+</div>
+
+<div class="card clearfix" data-score="55" data-price="26.55">
+  <div class="image_box">
+    <a target="_blank" href="https://amzn.to/31LRSax"><img src="https://m.media-amazon.com/images/I/61xkJJo5FEL._SR400,400_.jpg" alt="Newmsnr True Wireless Earbuds Bluetooth" /></a>
+  </div>
+  <div class="inner inner_top">
+    <span class="regular"><em>55% OFF</em> + free shipping</span>
+    <span class="shipping_condition">Free Shipping: <a target="_blank" href="/blogs/blog_01_amz_prime">Prime</a> or $25+ of all other eligible items.</a></span>
+    <p><a target="_blank" href="https://amzn.to/31LRSax">Newmsnr True Wireless Earbuds Bluetooth 5.0+EDR,IPX7 Waterproof Bluetooth Earbuds,HiFi Stereo Headphones with ...</a></p>
+    <div class="code_high">
+      <address><span class="dis_price">$26.55</span><span class="ori_price">$58.99</span></address>
+      <textarea readonly="readonly" class="code_area">55D2DNLR</textarea><button class="copycode">Copy</button>
+      <p class="mobile_code"><span>Take <strong>55% off at $58.99</strong> with promo code: <strong class="m_codes">55D2DNLR</strong></span></p><span class="ex_date ex_date_new">Expiration Date : Aug 31, 2019 at 11:59 PM PDT</span><em>*Pricing may change and Amazon promotional codes can expire fast.</em>
+    </div>
+  </div> 
+  <div class="deal_btn promo_btn"><a target="_blank" href="https://amzn.to/31LRSax">Use Code at Amazon</a></div>
+</div>
+
+<div class="card clearfix" data-score="55" data-price="12.15">
+  <div class="image_box">
+    <a target="_blank" href="https://amzn.to/2HaSI9e"><img src="https://m.media-amazon.com/images/I/61H2ME5F2dL._SR400,400_.jpg" alt="BETNEW Alarm Clock Wireless Bluetooth Speaker" /></a>
+  </div>
+  <div class="inner inner_top">
+    <span class="regular"><em>55% OFF</em> + free shipping</span>
+    <span class="shipping_condition">Free Shipping: <a target="_blank" href="/blogs/blog_01_amz_prime">Prime</a> or $25+ of all other eligible items.</a></span>
+    <p><a target="_blank" href="https://amzn.to/2HaSI9e">BETNEW Alarm Clock Wireless Bluetooth Speaker, Retro TV with Candy Color Design, 4 Hours Endurance, AUX TF Card Play,...</a></p>
+    <div class="code_high">
+      <address><span class="dis_price">$12.15</span><span class="ori_price">$26.99</span>
+        <div class="tooltip_common tooltip_green"><span>Extra Discount</span><div class="content_common tooltip-content"><p>Get extra discount with coupon</p></div></div>
+      </address>
+      <div class="m_tooltip_common m_tooltip_green"><span>Extra Discount</span><div class="m_content_common m_tooltip-content"><p>Get extra discount with coupon</p></div></div>
+      <textarea readonly="readonly" class="code_area">558DTL3W</textarea><button class="copycode">Copy</button>
+      <p class="mobile_code"><span>Take <strong>55% off at $26.99</strong> with promo code: <strong class="m_codes">558DTL3W</strong></span></p><span class="ex_date ex_date_new">Expiration Date : Aug 20, 2019 at 11:59 PM PDT</span><em>*Pricing may change and Amazon promotional codes can expire fast.</em>
+    </div>
+  </div> 
+  <div class="deal_btn promo_btn"><a target="_blank" href="https://amzn.to/2HaSI9e">Use Code at Amazon</a></div>
+</div>
+
+<div class="card clearfix" data-score="20" data-price="19.19">
+  <div class="image_box">
+    <a target="_blank" href="https://amzn.to/2KGXjlm"><img src="https://m.media-amazon.com/images/I/71bn1hp-PfL._SR400,400_.jpg" alt="12 In 1 Beard Grooming Care Kit For Men" /></a>
+  </div>
+  <div class="inner inner_top">
+    <span class="regular"><em>20% OFF</em> + free shipping</span>
+    <span class="shipping_condition">Free Shipping: <a target="_blank" href="/blogs/blog_01_amz_prime">Prime</a> or $25+ of all other eligible items.</a></span>
+    <p><a target="_blank" href="https://amzn.to/2KGXjlm">12 In 1 Beard Grooming Care Kit For Men, Dovich 100% Natural Beard Oil Leave-in Conditioner,Beard Apron Bib,...</a></p>
+    <div class="code_high">
+      <address><span class="dis_price">$19.19</span><span class="ori_price">$23.99</span>
+        <div class="tooltip_common tooltip_red"><span>Extra Discount</span><div class="content_common tooltip-content"><p>Get extra discount by applying promotional code to the product that is being discounting.</p></div></div>
+      </address>
+      <div class="m_tooltip_common m_tooltip_red"><span>Extra Discount</span><div class="m_content_common m_tooltip-content"><p>Get extra discount by applying promotional code to the product that is being discounting.</p></div></div>
+      <textarea readonly="readonly" class="code_area">201W8UGB</textarea><button class="copycode">Copy</button>
+      <p class="mobile_code"><span>Take <strong>20% off at $23.99</strong> with promo code: <strong class="m_codes">201W8UGB</strong></span></p><span class="ex_date ex_date_new">Expiration Date : Aug 18, 2019 at 11:59 PM PDT</span><em>*Pricing may change and Amazon promotional codes can expire fast.</em>
+    </div>
+  </div> 
+  <div class="deal_btn promo_btn"><a target="_blank" href="https://amzn.to/2KGXjlm">Use Code at Amazon</a></div>
+</div>
+
+<div class="card clearfix" data-score="50" data-price="8.49">
+  <div class="image_box">
+    <a target="_blank" href="https://amzn.to/2YXuTwz"><img src="https://m.media-amazon.com/images/I/81x1oWcsQ+L._SR400,400_.jpg" alt="Kohree String Lights LED" /></a>
+  </div>
+  <div class="inner inner_top">
+    <span class="regular"><em>50% OFF</em> + free shipping</span>
+    <span class="shipping_condition">Free Shipping: <a target="_blank" href="/blogs/blog_01_amz_prime">Prime</a> or $25+ of all other eligible items.</a></span>
+    <p><a target="_blank" href="https://amzn.to/2YXuTwz">Kohree String Lights LED Copper Wire Fairy Christmas Light with Remote Control, 33FT 100LEDs, 4 Packs 8 Modes AA Battery...</a></p>
+    <div class="code_high">
+      <address><span class="dis_price">$8.49</span><span class="ori_price">$16.99</span></address>
+      <textarea readonly="readonly" class="code_area">5075BC7P</textarea><button class="copycode">Copy</button>
+      <p class="mobile_code"><span>Take <strong>50% off at $16.99</strong> with promo code: <strong class="m_codes">5075BC7P</strong></span></p><span class="ex_date ex_date_new">Expiration Date : Aug 31, 2019 at 11:59 PM PDT</span><em>*Pricing may change and Amazon promotional codes can expire fast.</em>
+    </div>
+  </div> 
+  <div class="deal_btn promo_btn"><a target="_blank" href="https://amzn.to/2YXuTwz">Use Code at Amazon</a></div>
+</div>
+ 
 <div class="card clearfix" data-score="25" data-price="20.99">
   <div class="image_box">
     <a target="_blank" href="https://amzn.to/2HdzorX"><img src="https://m.media-amazon.com/images/I/61WLy2c1rYL._SR400,400_.jpg" alt="COSMETEA Korean Essence Face Mask" /></a>
