--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -1,8 +1,9 @@
 <!DOCTYPE html>
 <html lang="en">
   <head>
-    <title>Oh,igottabuythis - Coolest Gadgets, Amazon Promo Codes, Coupons and the best deals</title>
+    <title>Oh,igottabuythis - It is discount platform but also trending item platform.</title>
     <meta name="description" content="oh,igottabuythis is here to discover awesome gadgets. Find thousands of Amazon best deals, coupon codes, promotions you love.">
+    <meta name='keywords' content='amazon,coupon,promo codes,gadget,deals'/>
     <meta charset="utf-8"/>
     <meta content="IE=edge, chrome=1" http-equiv="X-UA-Compatible">
     <meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no" />
